.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements/scratch/w6-baseline-logs/03-phase3-telemetry.out
$ cd '/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public' && node .opencode/skill/system-spec-kit/scripts/dist/evals/run-phase3-telemetry-dashboard.js '.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements'
node:fs:435
    return binding.readFileUtf8(path, stringToFlags(options.flag));
                   ^

Error: ENOENT: no such file or directory, open '.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements/scratch/eval-dataset-1000.json'
    at Object.readFileSync (node:fs:435:20)
    at readJson (/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-phase3-telemetry-dashboard.js:28:36)
    at main (/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-phase3-telemetry-dashboard.js:179:22)
    at Object.<anonymous> (/Users/michelkerkmeester/MEGA/Development/Opencode Env/Public/.opencode/skill/system-spec-kit/scripts/dist/evals/run-phase3-telemetry-dashboard.js:187:1)
    at Module._compile (node:internal/modules/cjs/loader:1811:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1942:10)
    at Module.load (node:internal/modules/cjs/loader:1532:32)
    at Module._load (node:internal/modules/cjs/loader:1334:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5) {
  errno: -2,
  code: 'ENOENT',
  syscall: 'open',
  path: '.opencode/specs/003-system-spec-kit/139-hybrid-rag-fusion/006-hybrid-rag-fusion-logic-improvements/scratch/eval-dataset-1000.json'
}

Node.js v25.6.1
